@@ -1,3 +1,10 @@
+2006-07-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* {configure.ac, libtiff/tif_config.h.vc, libtiff/tif_jbig.c}
+	(JBIGDecode): jbg_newlen is not available in older JBIG-KIT and
+	its use does not appear to be required, so use it only when it is
+	available.
+
 2006-06-24  Andrey Kiselev  <dron@ak4719.spb.edu>
 
 	* libtiff/tif_dirinfo.c: Added missed EXIF tag ColorSpace (40961).
